{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 680,
  "lineage": "2ce471c2-3399-c730-e1e7-9b077926a8e9",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0745b7d4092315796",
            "arn": "arn:aws:ec2:eu-central-1:863872515231:instance/i-0236b0b6bdeb1f2ee",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0236b0b6bdeb1f2ee",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f250d10a40252100",
            "private_dns": "ip-10-0-1-125.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.125",
            "public_ip": "3.73.64.69",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cede9cdd99758acb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cc1f1f8b0ab60300",
            "tags": {
              "Name": "akeronPublicEc2"
            },
            "tags_all": {
              "Name": "akeronPublicEc2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a30811812f1f3e3e"
            ]
          },
          "dependencies": [
            "module.ec2.aws_security_group.sg_example",
            "module.ec2.data.aws_ami.ubuntu",
            "module.vpc.aws_subnet.public_subnet_example",
            "module.vpc.aws_vpc.vpc_example"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_example_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0745b7d4092315796",
            "arn": "arn:aws:ec2:eu-central-1:863872515231:instance/i-023c55268205d8043",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-023c55268205d8043",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0108d6c0822af7768",
            "private_dns": "ip-10-0-2-80.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.80",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08fbf76a973b7ca79",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ed9d1bf77db263dd",
            "tags": {
              "Name": "akeronPrivateEc2"
            },
            "tags_all": {
              "Name": "akeronPrivateEc2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a30811812f1f3e3e"
            ]
          },
          "dependencies": [
            "module.ec2.aws_security_group.sg_example",
            "module.ec2.data.aws_ami.ubuntu",
            "module.vpc.aws_subnet.private_subnet_example",
            "module.vpc.aws_vpc.vpc_example"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:863872515231:security-group/sg-0a30811812f1f3e3e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a30811812f1f3e3e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "akeronSG",
            "name_prefix": "",
            "owner_id": "863872515231",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-063d524e4c28fad25"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc_example"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "akeron_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:863872515231:targetgroup/akeron-target-group-a/fd1acd2f7cb5a2f0",
            "arn_suffix": "targetgroup/akeron-target-group-a/fd1acd2f7cb5a2f0",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:863872515231:targetgroup/akeron-target-group-a/fd1acd2f7cb5a2f0",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "akeron-target-group-a",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-063d524e4c28fad25"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_example"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "akeron_target_group_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:863872515231:targetgroup/akeron-target-group-b/4b4c53828b9d1336",
            "arn_suffix": "targetgroup/akeron-target-group-b/4b4c53828b9d1336",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:863872515231:targetgroup/akeron-target-group-b/4b4c53828b9d1336",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "akeron-target-group-b",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-063d524e4c28fad25"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_example"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "akeron_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:863872515231:loadbalancer/app/my-alb/87bcc3e9e410c54b",
            "arn_suffix": "app/my-alb/87bcc3e9e410c54b",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "my-alb-1674818044.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:863872515231:loadbalancer/app/my-alb/87bcc3e9e410c54b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "my-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a30811812f1f3e3e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0cc1f1f8b0ab60300"
              },
              {
                "subnet_id": "subnet-0ed9d1bf77db263dd"
              }
            ],
            "subnets": [
              "subnet-0cc1f1f8b0ab60300",
              "subnet-0ed9d1bf77db263dd"
            ],
            "tags": {
              "Environment": "dev"
            },
            "tags_all": {
              "Environment": "dev"
            },
            "vpc_id": "vpc-063d524e4c28fad25",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "module.ec2.aws_security_group.sg_example",
            "module.vpc.aws_subnet.private_subnet_example",
            "module.vpc.aws_subnet.public_subnet_example",
            "module.vpc.aws_vpc.vpc_example"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "my_alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:863872515231:listener/app/my-alb/87bcc3e9e410c54b/0d00533116131af5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [
                  {
                    "stickiness": [
                      {
                        "duration": 0,
                        "enabled": false
                      }
                    ],
                    "target_group": [
                      {
                        "arn": "arn:aws:elasticloadbalancing:eu-central-1:863872515231:targetgroup/akeron-target-group-a/fd1acd2f7cb5a2f0",
                        "weight": 1
                      },
                      {
                        "arn": "arn:aws:elasticloadbalancing:eu-central-1:863872515231:targetgroup/akeron-target-group-b/4b4c53828b9d1336",
                        "weight": 1
                      }
                    ]
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:863872515231:listener/app/my-alb/87bcc3e9e410c54b/0d00533116131af5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:863872515231:loadbalancer/app/my-alb/87bcc3e9e410c54b",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_security_group.sg_example",
            "module.lb.aws_alb_target_group.akeron_target_group",
            "module.lb.aws_alb_target_group.akeron_target_group_b",
            "module.lb.aws_lb.akeron_lb",
            "module.vpc.aws_subnet.private_subnet_example",
            "module.vpc.aws_subnet.public_subnet_example",
            "module.vpc.aws_vpc.vpc_example"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "akeron_tg_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:863872515231:targetgroup/akeron-target-group-a/fd1acd2f7cb5a2f0-20241105153408004900000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:863872515231:targetgroup/akeron-target-group-a/fd1acd2f7cb5a2f0",
            "target_id": "i-0236b0b6bdeb1f2ee"
          },
          "dependencies": [
            "module.ec2.aws_instance.ec2_example",
            "module.ec2.aws_security_group.sg_example",
            "module.ec2.data.aws_ami.ubuntu",
            "module.lb.aws_alb_target_group.akeron_target_group",
            "module.vpc.aws_subnet.public_subnet_example",
            "module.vpc.aws_vpc.vpc_example"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "akeron_tg_attachment_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:863872515231:targetgroup/akeron-target-group-b/4b4c53828b9d1336-20241105153359810700000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:863872515231:targetgroup/akeron-target-group-b/4b4c53828b9d1336",
            "target_id": "i-023c55268205d8043"
          },
          "dependencies": [
            "module.ec2.aws_instance.ec2_example_2",
            "module.ec2.aws_security_group.sg_example",
            "module.ec2.data.aws_ami.ubuntu",
            "module.lb.aws_alb_target_group.akeron_target_group_b",
            "module.vpc.aws_subnet.private_subnet_example",
            "module.vpc.aws_vpc.vpc_example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0714c0f570b2991ee",
            "arn": "arn:aws:ec2:eu-central-1:863872515231:elastic-ip/eipalloc-0714c0f570b2991ee",
            "domain": "vpc",
            "id": "eipalloc-0714c0f570b2991ee",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-54-93-77-49.eu-central-1.compute.amazonaws.com",
            "public_ip": "54.93.77.49",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "akeroneip"
            },
            "tags_all": {
              "Name": "akeroneip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:863872515231:internet-gateway/igw-046e0a98754f3989c",
            "id": "igw-046e0a98754f3989c",
            "owner_id": "863872515231",
            "tags": {
              "Name": "akeronIgw"
            },
            "tags_all": {
              "Name": "akeronIgw"
            },
            "vpc_id": "vpc-063d524e4c28fad25"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw_example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0714c0f570b2991ee",
            "association_id": "eipassoc-0efe7489bd58c12bd",
            "connectivity_type": "public",
            "id": "nat-01c62682aa809f0f5",
            "network_interface_id": "eni-07a83854fda962d1f",
            "private_ip": "10.0.1.42",
            "public_ip": "54.93.77.49",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0cc1f1f8b0ab60300",
            "tags": {
              "name": "akeronNgw"
            },
            "tags_all": {
              "name": "akeronNgw"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.eip_example",
            "module.vpc.aws_subnet.public_subnet_example",
            "module.vpc.aws_vpc.vpc_example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table2_example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:863872515231:route-table/rtb-0092eb4fe1f91b93a",
            "id": "rtb-0092eb4fe1f91b93a",
            "owner_id": "863872515231",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-01c62682aa809f0f5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "akeronPrivateRouteTable"
            },
            "tags_all": {
              "Name": "akeronPrivateRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-063d524e4c28fad25"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.eip_example",
            "module.vpc.aws_nat_gateway.ngw_example",
            "module.vpc.aws_subnet.public_subnet_example",
            "module.vpc.aws_vpc.vpc_example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:863872515231:route-table/rtb-0947112ad1243805d",
            "id": "rtb-0947112ad1243805d",
            "owner_id": "863872515231",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-046e0a98754f3989c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "akeronRouteTable"
            },
            "tags_all": {
              "Name": "akeronRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-063d524e4c28fad25"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw_example",
            "module.vpc.aws_vpc.vpc_example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta2_example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-032461c169690c35e",
            "route_table_id": "rtb-0092eb4fe1f91b93a",
            "subnet_id": "subnet-0ed9d1bf77db263dd"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip_example",
            "module.vpc.aws_nat_gateway.ngw_example",
            "module.vpc.aws_route_table.route_table2_example",
            "module.vpc.aws_subnet.private_subnet_example",
            "module.vpc.aws_subnet.public_subnet_example",
            "module.vpc.aws_vpc.vpc_example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta_example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05844126b29fecf6c",
            "route_table_id": "rtb-0947112ad1243805d",
            "subnet_id": "subnet-0cc1f1f8b0ab60300"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw_example",
            "module.vpc.aws_route_table.route_table_example",
            "module.vpc.aws_subnet.public_subnet_example",
            "module.vpc.aws_vpc.vpc_example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:863872515231:subnet/subnet-0ed9d1bf77db263dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ed9d1bf77db263dd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "863872515231",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "akeronPrivateSubnet"
            },
            "tags_all": {
              "Name": "akeronPrivateSubnet"
            },
            "vpc_id": "vpc-063d524e4c28fad25"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:863872515231:subnet/subnet-0cc1f1f8b0ab60300",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cc1f1f8b0ab60300",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "863872515231",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "akeronPublicSubnet"
            },
            "tags_all": {
              "Name": "akeronPublicSubnet"
            },
            "vpc_id": "vpc-063d524e4c28fad25"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc_example"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:863872515231:vpc/vpc-063d524e4c28fad25",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0474a4a757c01d0c1",
            "default_route_table_id": "rtb-01ef9480789c7aa5e",
            "default_security_group_id": "sg-0e4fde9f05296fdbd",
            "dhcp_options_id": "dopt-0b8e5a1e55b24e272",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-063d524e4c28fad25",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01ef9480789c7aa5e",
            "owner_id": "863872515231",
            "tags": {
              "Name": "akeronVpc"
            },
            "tags_all": {
              "Name": "akeronVpc"
            }
          }
        }
      ]
    }
  ]
}